--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "express-redis",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Express middleware for a redis connection.",
   "main": "index.js",
   "author": "Elliott Foster <elliottf@codebrews.com> (http://codebrews.com/)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/elliotttf/express-redis.git"
+    "url": "https://github.com/pthm/express-redis.git"
   },
   "license": "MIT",
   "dependencies": {
