--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "express-redis",
-  "version": "1.2.3",
   "description": "Express middleware for a redis connection.",
   "main": "lib/redis.js",
   "author": "Elliott Foster <elliottf@codebrews.com> (http://codebrews.com/)",
@@ -8,7 +7,8 @@
     "test": "istanbul cover --print both nodeunit ./test/index.js",
     "lint": "eslint .",
     "coverage": "istanbul check-coverage --statements 100 --lines 100 --branches 100 --functions 100",
-    "coveralls": "cat ./coverage/lcov.info | coveralls"
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
@@ -16,15 +16,21 @@
   },
   "license": "MIT",
   "dependencies": {
-    "redis": "^2.6.2",
     "debug": "^2.2.0"
+  },
+  "peerDependencies": {
+    "redis": "^2.6.2"
   },
   "devDependencies": {
     "coveralls": "^2.11.9",
-    "eslint": "^2.13.1 <3",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "ghooks": "^1.2.4",
     "istanbul": "^0.4.4",
     "nodeunit": "^0.10.2",
+    "redis": "^2.6.2",
+    "semantic-release": "^4.3.5",
     "sinon": "^1.17.4"
   },
   "config": {
@@ -34,6 +40,6 @@
     }
   },
   "engines": {
-    "node": ">=0.12"
+    "node": ">=6"
   }
 }
